# nightcore

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.mjs  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: audit.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: arch_guards.rs  e2e_gh.rs  engine_api.rs  gauntlet.rs  lib.rs  logging.rs  main.rs  merge.rs  project.rs  settings.rs  sidecar.rs  store.rs  sync.rs  task.rs  transcript.rs  worktree.rs
apps/desktop/src-tauri/src/analysis/: context.rs  injection_scan.rs  mod.rs  repo_map.rs
apps/desktop/src-tauri/src/analysis/repo_map/: lang.rs  mod.rs  parse.rs  render.rs  resolve.rs
apps/desktop/src-tauri/src/bindings/: export.rs
apps/desktop/src-tauri/src/commands/: checks.rs  fs.rs  mod.rs  onboarding.rs  policy.rs  project.rs  settings.rs  task.rs  terminal.rs  trust.rs  usage.rs  worktree.rs
apps/desktop/src-tauri/src/contracts/: fixtures.json  generated.rs  mod.rs  ts_bindings.rs
apps/desktop/src-tauri/src/e2e/: boot_state.rs  crash_requeue.rs  failure_breaker.rs  harness.rs  mod.rs  run_lifecycle.rs  slot_leak.rs
apps/desktop/src-tauri/src/e2e/transcript_replay/: build.rs  mod.rs  pr_review.rs  replay.rs  scan.rs
apps/desktop/src-tauri/src/git/: gh.rs  mod.rs  parse.rs  query.rs  refname.rs  run.rs  testutil.rs
apps/desktop/src-tauri/src/infra/: browse.rs  editor.rs  logging.rs  mod.rs  path_confine.rs  platform.rs  proc.rs  safe_join.rs  text.rs  time.rs
apps/desktop/src-tauri/src/m2/: breaker.rs  coordinator.rs  deps.rs  mod.rs  provider.rs  slots.rs  worktree.rs
apps/desktop/src-tauri/src/orchestration/: breaker.rs  coordinator.rs  deps.rs  engine_handle.rs  mod.rs  provider.rs  slots.rs
apps/desktop/src-tauri/src/orchestration/coordinator/: auto_loop.rs  commands.rs  cwd.rs  mod.rs  reconcile.rs  state.rs  submit.rs  usage_gate.rs
apps/desktop/src-tauri/src/orchestration/provider/: correlation.rs  imp.rs  mod.rs  spawn.rs
apps/desktop/src-tauri/src/platform/: mod.rs
apps/desktop/src-tauri/src/provider/: correlation.rs  factory.rs  imp.rs  mod.rs  spawn.rs  types.rs
apps/desktop/src-tauri/src/sidecar/: capabilities.rs  channels.rs  commands.rs  convert.rs  council_worktree.rs  harness.rs  insight.rs  issue_map.rs  issue_sync.rs  issue_triage.rs  lifecycle.rs  mod.rs  models.rs  permission.rs  pr_review.rs  provider_config.rs  reader.rs  rule_tester.rs  scan.rs  scorecard.rs  sessions.rs  transport.rs  verification.rs
apps/desktop/src-tauri/src/sidecar/harness/: apply.rs  commands.rs  convert.rs  events.rs  lint_wiring.rs  mod.rs
apps/desktop/src-tauri/src/sidecar/issue_triage/: commands.rs  convert.rs  events.rs  mod.rs
apps/desktop/src-tauri/src/sidecar/verification/: dispatch.rs  handlers.rs  mod.rs
apps/desktop/src-tauri/src/store/: atomic.rs  attachments.rs  board_background.rs  checks_state.rs  context.rs  harness.rs  harness_manifest.rs  harness_policy.rs  injection_scan.rs  insight.rs  issue_triage.rs  ledger.rs  mod.rs  model_cache.rs  paths.rs  pr_review.rs  project.rs  project_icon.rs  registry.rs  repo_map.rs  run_store.rs  scorecard.rs  settings.rs  task.rs  transcript.rs  types.rs
apps/desktop/src-tauri/src/store/harness/: mod.rs  status.rs  store.rs  wire.rs
apps/desktop/src-tauri/src/store/settings/: helpers.rs  mod.rs  model.rs  patch.rs  store.rs
apps/desktop/src-tauri/src/store/task/: create.rs  crud.rs  mod.rs  model.rs  patch.rs
apps/desktop/src-tauri/src/terminal/: backend.rs  confine.rs  mod.rs  persist.rs  registry.rs  scrollback.rs  session.rs  shell.rs  title.rs  types.rs
apps/desktop/src-tauri/src/terminal/daemon/: client.rs  discovery.rs  fanout.rs  integration_tests.rs  launch.rs  mod.rs  protocol.rs  server.rs
apps/desktop/src-tauri/src/usage/: claude.rs  codex.rs  contract.rs  cost.rs  credentials.rs  http.rs  mod.rs  poller.rs  pricing.rs  registry.rs  throttle.rs
apps/desktop/src-tauri/src/workflow/: anti_gaming.rs  claude_oneshot.rs  commit_msg.rs  contract_budget.rs  diff_budget.rs  gauntlet.rs  gauntlet_project.rs  github_labels.rs  github_md.rs  kind.rs  merge.rs  mod.rs  oneshot.rs  plan_approval.rs  pr.rs  pr_changed_files.rs  pr_comments.rs  pr_list.rs  pr_msg.rs  pr_review_post.rs  pr_status.rs  ratchet.rs  secret_scan.rs
apps/desktop/src-tauri/src/workflow/anti_gaming/: detect.rs  ledger.rs  mod.rs  report.rs  sweep.rs  tests.rs
apps/desktop/src-tauri/src/workflow/gauntlet/: command.rs  contract.rs  detect.rs  mod.rs  run.rs  tests.rs
apps/desktop/src-tauri/src/workflow/gauntlet_project/: command_guard.rs  config.rs  drift.rs  mod.rs  runner.rs  tests.rs
apps/desktop/src-tauri/src/workflow/issue_map/: contract.rs  kind.rs  mod.rs  narrative.rs  plan.rs  post.rs  render.rs  tests.rs  tests_support.rs
apps/desktop/src-tauri/src/workflow/issue_sync/: comment.rs  degrade.rs  labels.rs  mod.rs  transition.rs
apps/desktop/src-tauri/src/workflow/issue_triage/: detail.rs  diff.rs  list.rs  mod.rs  post.rs  shared.rs
apps/desktop/src-tauri/src/workflow/merge/: commit.rs  integrate.rs  lease.rs  mod.rs  review.rs  tests.rs
apps/desktop/src-tauri/src/workflow/pr/: capability.rs  create.rs  draft.rs  gh.rs  mod.rs  open.rs  parse.rs  viewer.rs
apps/desktop/src-tauri/src/workflow/pr_comments/: command.rs  contract.rs  fetch.rs  mod.rs  tests.rs  triage.rs
apps/desktop/src-tauri/src/workflow/pr_fix/: checkout.rs  ci.rs  command.rs  comment.rs  complete.rs  conflicts.rs  dispatch.rs  mod.rs  prompt.rs  state.rs  tests.rs
apps/desktop/src-tauri/src/workflow/pr_review_post/: anchor.rs  diff.rs  mod.rs  post.rs  tests.rs  timeout.rs
apps/desktop/src-tauri/src/workflow/pr_status/: finalize.rs  mod.rs  pull.rs  push.rs  status.rs  tests.rs  (+1 more)
apps/desktop/src-tauri/src/worktree/: branch.rs  commit.rs  diff.rs  index.rs  lifecycle.rs  merge.rs  mod.rs  path.rs  provision.rs  status.rs  tests.rs
(+1574 files in other folders)
