[package]
name = "nightcore"
version = "0.0.0"
description = "Nightcore — an autonomous Claude dev studio"
authors = ["Shirone"]
edition = "2021"
rust-version = "1.77.2"

# The library target Tauri builds; `main.rs` is a thin shim that calls `run()`.
[lib]
name = "nightcore_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-notification = "2.3"
serde = { version = "1.0", features = ["derive"] }
# `raw_value` lets the sidecar reader serialize each streamed session event ONCE
# into a `RawValue` and share those bytes with both the webview envelope (emitted
# verbatim) and the transcript writer — see `sidecar::reader::handle_event`.
serde_json = { version = "1.0", features = ["raw_value"] }
uuid = { version = "1.23", features = ["v4"] }
base64 = "0.22"
async-trait = "0.1"
tokio = { version = "1.52", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "io-util",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter"] }
tracing-appender = "0.2"
which = "6.0"
# Repo Map (hardening #14, `store::repo_map`): real parsers extract definition
# symbols + import edges from TS/TSX/JS/Rust sources for the PageRank-ranked map
# in the Context Pack. The grammar crates interop with core via
# `tree-sitter-language`, so their versions need not match the core's.
tree-sitter = "0.26.10"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-rust = "0.24.2"

[dev-dependencies]
tempfile = "3.27"
# Rust→TS contract codegen: `#[derive(TS)]` exports the bindings under
# `apps/web/src/lib/generated/` during `cargo test` (see `contracts/ts_bindings.rs`),
# the inverse of the zod→Rust sidecar codegen. The CI drift guard is "regenerate +
# assert no git diff". Default features include `serde-compat` so serde attrs
# (rename_all/skip_serializing_if/default) shape the TS exactly like the wire.
ts-rs = "12.0"
