[package]
name = "nightcore"
version = "0.2.1"
description = "Nightcore — an autonomous Claude dev studio"
authors = ["Shirone"]
edition = "2021"
rust-version = "1.77.2"

# The library target Tauri builds; `main.rs` is a thin shim that calls `run()`.
[lib]
name = "nightcore_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-notification = "2.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
# `raw_value` lets the sidecar reader serialize each streamed session event ONCE
# into a `RawValue` and share those bytes with both the webview envelope (emitted
# verbatim) and the transcript writer — see `sidecar::reader::handle_event`.
serde_json = { version = "1.0", features = ["raw_value"] }
uuid = { version = "1.23", features = ["v4"] }
base64 = "0.22"
async-trait = "0.1"
tokio = { version = "1.52", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "io-util",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter"] }
tracing-appender = "0.2"
which = "6.0"
# `open_external`'s https-only validation (PR arc, phase 1): parse + normalize a
# URL before it reaches the platform browser opener. Already in the tree via
# tauri, so this adds no new transitive code.
url = "2"
# Repo Map (hardening #14, `store::repo_map`): real parsers extract definition
# symbols + import edges from TS/TSX/JS/Rust sources for the PageRank-ranked map
# in the Context Pack. The grammar crates interop with core via
# `tree-sitter-language`, so their versions need not match the core's.
tree-sitter = "0.26.10"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-rust = "0.24.2"
# The integrated USER terminal (`terminal/`): wezterm's cross-platform PTY layer —
# `openpty` + `spawn_command` into a real pty, a blocking `try_clone_reader` per
# session (a dedicated reader thread is mandatory), `take_writer`, and `resize`
# (SIGWINCH). Chosen over the `tauri-plugin-pty` drop-in (invoke long-poll data
# path, RUSTSEC-flagged `safemem`, no registry lifecycle hooks) per the feasibility
# research. USER-ONLY seam — no agent/sidecar path ever reaches it.
portable-pty = "0.9.0"
# Usage meter (issue #121): the ONE first-party HTTP client for the reverse-engineered
# provider usage endpoints. The crate tree ALREADY compiles reqwest 0.13 + rustls (via
# `tauri-plugin-updater`), which pins the `ring` crypto provider — NOT aws-lc-rs. So
# this direct dep matches that exactly: `default-features = false` + `rustls-no-provider`
# (reqwest 0.13 dropped the `rustls-tls` feature; `rustls` here would pull aws-lc-rs +
# reintroduce the openssl/native-tls CI grief the rustls choice avoids). It adds
# essentially no new transitive compile cost. `use_rustls_tls()` + the ring provider are
# wired in `usage::http::build_client`.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
# Named directly (feature-unified with the updater's copy) only so `build_client` can
# install the `ring` crypto provider as the process default — required because
# reqwest's `rustls-no-provider` builds its TLS config from the process default at
# client-build time. Same version + provider the tree already resolves; no new cost.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
tempfile = "3.27"
# E2E ladder ring 1 (issue #150): the `tauri::test` MockRuntime harness needs the
# `test` feature enabled on `tauri`. Declared here (not on the `[dependencies]`
# edge) so it is feature-unified into dev/test builds only — a release build never
# compiles `tauri::test`. Version-pinned to match the `[dependencies]` copy.
tauri = { version = "2.11.2", features = ["test"] }
# Rust→TS contract codegen: `#[derive(TS)]` exports the bindings under
# `apps/web/src/lib/generated/` during `cargo test` (see `contracts/ts_bindings.rs`),
# the inverse of the zod→Rust sidecar codegen. The CI drift guard is "regenerate +
# assert no git diff". Default features include `serde-compat` so serde attrs
# (rename_all/skip_serializing_if/default) shape the TS exactly like the wire.
ts-rs = "12.0"

# Usage meter (issue #121): the Claude `Claude Code-credentials` Keychain read is
# macOS-only. Target-gated so Linux/Windows CI clippy (-D warnings) never sees the
# macOS-only Keychain path as dead code (trap a). Version-unified with the copy
# `tauri` already pulls transitively.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

# Terminal daemon peer-cred (terminal round 2, PR D): the detached-PTY-daemon socket
# is authenticated by filesystem perms (0700 dir / 0600 socket); this adds a
# defence-in-depth uid check on every accepted connection via the kernel peer
# credential (`SO_PEERCRED` on Linux / `getpeereid` on macOS/BSD). Unix-only. `libc`
# 0.2 is ALREADY resolved transitively in Cargo.lock (via tokio/portable-pty/…), so
# naming it as a direct dep adds ZERO new transitive crates — just the direct edge —
# and is preferred over hand-declaring the Linux `ucred` layout or pulling the larger
# `nix`. The macOS/Linux FFI branch is compiled per-OS behind `#[cfg(target_os)]`.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
